--- a/my_resume/src/styles/App.customized.css
+++ b/my_resume/src/styles/App.customized.css
@@ -5,8 +5,8 @@
     margin-top: 10px;
 }
 .profile img.head{
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
 }
 h2{
@@ -14,4 +14,7 @@ h2{
 }
 .job p{
   text-align: center;
+}
+.right{
+  text-align: right;
 }
